// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PermissionsList component should be rendered correctly with konnector permissions 1`] = `
<div>
  <ul
    className="sto-perm-list"
  />
  <div
    className="sto-perm-list-title"
  >
    <Icon
      className="sto-perm-list-icon"
      color="#35CE68"
      icon="test-file-stub"
      size="24"
      spin={false}
    />
    <p>
      Data can be accessed but neither shared nor transmitted outside your Cozy:
    </p>
  </div>
  <ul
    className="sto-perm-list"
  >
    <LocalizedPermission
      description="Required to link bills to bank operations"
      name="bank operations"
      slug="konnector-trinlane"
      t={[Function]}
      type="io.cozy.bank.operations"
    />
    <LocalizedPermission
      description="Required to save the bills data"
      name="bills"
      slug="konnector-trinlane"
      t={[Function]}
      type="io.cozy.bills"
    />
    <LocalizedPermission
      description="Required to save the bills"
      name="files"
      slug="konnector-trinlane"
      t={[Function]}
      type="io.cozy.files"
    />
    <LocalizedPermission
      description="Required to get the account's data"
      name="accounts"
      slug="konnector-trinlane"
      t={[Function]}
      type="io.cozy.accounts"
      verbs={
        Array [
          "GET",
        ]
      }
    />
  </ul>
</div>
`;

exports[`PermissionsList component should be rendered correctly with permissions 1`] = `
<div>
  <ul
    className="sto-perm-list"
  />
  <div
    className="sto-perm-list-title"
  >
    <Icon
      className="sto-perm-list-icon"
      color="#35CE68"
      icon="test-file-stub"
      size="24"
      spin={false}
    />
    <p>
      Data can be accessed but neither shared nor transmitted outside your Cozy:
    </p>
  </div>
  <ul
    className="sto-perm-list"
  >
    <LocalizedPermission
      description="Required for photo access"
      methods={
        Array [
          "GET",
          "POST",
          "PUT",
        ]
      }
      name="files"
      slug="photos"
      t={[Function]}
      type="io.cozy.files"
    />
    <LocalizedPermission
      description="Required by the cozy-bar to display the icons of the apps"
      name="apps"
      slug="photos"
      t={[Function]}
      type="io.cozy.apps"
      verbs={
        Array [
          "GET",
        ]
      }
    />
    <LocalizedPermission
      description="Required to manage photos albums"
      methods={
        Array [
          "GET",
          "POST",
          "PUT",
        ]
      }
      name="albums"
      slug="photos"
      t={[Function]}
      type="io.cozy.photos.albums"
    />
    <LocalizedPermission
      description="Required to to share photos with your contacts"
      methods={
        Array [
          "GET",
          "POST",
        ]
      }
      name="contacts"
      slug="photos"
      t={[Function]}
      type="io.cozy.contacts"
    />
    <LocalizedPermission
      description="Required by the cozy-bar to display Claudy and know which applications are coming soon"
      name="settings"
      slug="photos"
      t={[Function]}
      type="io.cozy.settings"
      verbs={
        Array [
          "GET",
        ]
      }
    />
  </ul>
</div>
`;

exports[`PermissionsList component should be rendered correctly without permissions 1`] = `
<ReactMarkdownWrapper
  source="%{appName} doesn't require any data access to work correctly on your Cozy."
/>
`;
